fixed contrast in submit button

--- a/Lesson-06/weather/css/small.css
+++ b/Lesson-06/weather/css/small.css
@@ -245,7 +245,7 @@ form label.sbs {
 form input.submitBtn {
     border: none;
     background-color:var(--accent1-color);
-    color:var(--primary-color);
+    color:var(--secondary-color);
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     margin: 0 0 2rem 2%;
